# chess_figures_placement

./: .gitignore  .pylintrc  Makefile  README.rst  pyproject.toml
src/phrase_chess_task/: __init__.py  service.py
src/phrase_chess_task/api/: __init__.py  flask_app.py
src/phrase_chess_task/api/common/: __init__.py  tools.py
src/phrase_chess_task/api/v1/: routes.py
src/phrase_chess_task/service_layer/: __init__.py  solver.py
src/phrase_chess_task/service_layer/solvers/: __init__.py  bishop.py  common.py  knight.py  queen.py  rook.py
tests/: conftest.py  test_phrase_chess_task.py
tests/unit/: test_api.py  test_solver.py
