[tool.poetry]
name = "phrase_chess_task"
version = "0.1.0"
description = ""
authors = ["Valerii Ulitin <valerii.ulitin@merck.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
Werkzeug = "^2.2.2"
ortools = "^9.4.1874"
voluptuous = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = {version = "^22.10.0", allow-prereleases = true}
mypy = "^0.991"
pylint = "^2.15.5"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
